# cacm-anomaly-detection

./: .gitattributes  .gitignore  .pre-commit-config.yaml  01-continuous-auditing-monitoring.md  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  Run.bat  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docs.yml
architecture/: index.html
data-model/: index.html
detectors/: index.html
docs/: architecture.md  data-model.md  detectors.md  index.md  lessons-learned.md  operations.md
lessons-learned/: index.html
operations/: index.html
powerbi/: README.md  data_model.md
powerbi/queries/: power_query_alertas.m
scripts/: gerar_dados.py  rodar_pipeline.py  treinar_modelos.py
search/: search_index.json
src/cacm/: __init__.py  cli.py  config.py
src/cacm/alerts/: persistence.py  scoring.py
src/cacm/detectors/ml/: autoencoder.py  features.py  isolation_forest.py  logistic_calibrator.py
src/cacm/detectors/statistical/: benford.py  cusum.py  ewma.py  structuring.py  three_sigma.py
src/cacm/generators/: dimensoes.py  fraudes_sinteticas.py  transacoes.py
src/cacm/ingestion/: bronze.py  streaming.py
src/cacm/transformations/: gold.py  silver.py
src/cacm/utils/: logging.py  spark_session.py
tests/integration/: test_silver_pipeline.py
tests/unit/: test_config.py  test_detectores_estatisticos.py  test_detectores_ml.py  test_generators.py  test_scoring.py
