[tool.poetry]
name = "cacm"
version = "0.1.0"
description = "Continuous Auditing / Continuous Monitoring (CA/CM) pipeline with anomaly detection over credit-union transactions."
authors = ["Leonardo Zadorosny <leozadorosny0@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "cacm", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyspark = "^3.5.1"
pandas = "^2.2.2"
numpy = "^1.26.4"
scipy = "^1.13.0"
statsmodels = "^0.14.2"
scikit-learn = "^1.5.0"
torch = "^2.3.0"
mlflow = "^2.13.0"
faker = "^25.0.0"
pyarrow = "^16.0.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
structlog = "^24.1.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.4.4"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
ipykernel = "^6.29.4"
mkdocs-material = "^9.5.20"

[tool.poetry.scripts]
cacm = "cacm.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=cacm --cov-report=term-missing"
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
    "slow: marks slow tests",
]

[tool.coverage.run]
branch = true
source = ["cacm"]
